portfolio/src/main/webapp/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Josefin Sans', sans-serif;
}

html {
  scroll-behavior: smooth;
}

.main-info-section {
    display: flex;
    justify-content: center;
    align-items: center;
    height: calc(100vh - 140px);
} 

header {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: 20px 0;
}

header h1, 
header a,
.text p,
.about h1,
.skills h1,
.work h1,
.contact h1 {
    color: black;
    font-size: 20px;
}

/* a {
  text-decoration: none;
  font-size: 1rem;
  text-transform: uppercase;
  position: relative;
  top: 50%;
  bottom: 50%;
  transform: translateY(-50%);
} */

/* .main-info-section {
  padding-top: 5vh;
  height: 75vh;
} */

/* .text {
  margin-top: 120px;
} */

.text h1 {
    color: black;
    font-size: 5rem;
}

.text span{
    display: inline-block;
}

span:hover {
    color: red;
    transition: all .5s;
}

span.name {
    color: red;
}

span.m-left{
    margin-left: -10px;   
}

.text p {
    letter-spacing: 3px;
    word-spacing: 10px;
    font-size: 20px;
}

.text a {
    padding: 12px 25px;
    background-color: none;
    border: 3px solid red;
    color: red;
    font-size: 1rem;
    letter-spacing: 2px;
    overflow: hidden;
    transition: .5s;
    display: inline-block;
    position: absolute;
    bottom: 0;
    font-weight: bold;
}

.text a:hover{
    color: white
}

.text a::before {
    content: '';
    background-color: red;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 0%;
    z-index: -1;
    transition: .5s;
}

.text a:hover::before {
    height: 100%;
}

.avatar img {
    width: 425px;
    border-radius:90% 1% 1%;
    float:right;
}

.center {
    position: absolute;
    left: 50%;
    transform: translate(-50%, -50%);
}

.about h1,
.contact h1,
.comments h1{
    font-size:10rem;
    z-index: 0;
    opacity: .1;
}

.about-me-info,
.contact-me{
    max-width: 900px;
    background-color: #343434;
    box-shadow: 0 0 1.2rem rgba(0, 0, 0, 0.5);
    padding: 50px;
    position: relative;
    top: -70px;
    left: 50%;
    right: 50%;
    transform: translateX(-50%);
    z-index: 1;
}

.about-me-info p,
.contact-me p {
    font-size: 1.3rem;
    color: white;
    margin: 10px;
}

.about-me-info p:nth-child(2),
.about-me-info p:last-child,
.contact-me p:nth-child(2),
.contact-me p:last-child  {
     margin-top:30px;
}

.about img,
.contact img {
    width: 300px;
    position: relative;
    top: -200px;
    left: 50%;
    right: 50%;
    transform: translateX(100%);
    border-radius: 50%;
}

/*  
.secret-message{
  width: 300px;
  position: relative;
  top: -70%;
  text-align: center;
  color: white;
  font-size: 1rem;
  left: 50%;
  right: 50%;
  transform: translateX(100%);
  font-weight: bold;
}

.centered{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#content {
  margin-left: auto;
  margin-right: auto;
  width: 650px;
}


#skills{
  height: 17vh;
}

.skills {
  height: 70vh;
}

.skills h1,
#maptitle {
  text-align: right;
  font-size: 10rem;
  color: #C0C0C0;
}

#maptitle{
  color: black;
}

.skills-info {
  font-size: 1.2rem;
  color: #343434;
  max-width: 800px;
  position: relative;
  left: 50%;
  right: 50%;
  transform: translateX(-50%);
  text-align: center;
  margin-bottom: 50px;
}

.html {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-bottom: 3vh;
}

div[class^='tag-'] {
  clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 0% 50%, 0% 0%);
  width: 120px;
  height: 30px;
  background-color: #C0C0C0;
  margin-right: 35px;
}

div[class^='tag-'] p{
  color: white;
  text-align: left;
  padding-left: 10px;
  font-size: 1rem;
  padding-top: 8px;
}

.progressbar {
  position: relative;
  width: 600px;
  height: 20px;
  border-radius: 20px;
  background-color: #C0C0C0;
}

#htmlBar {
  position: relative;
  width: 500px;
  height: 20px;
  margin-top 7px;
  background-color: red;
}

#jsBar {
  position: relative;
  width: 250px;
  height: 20px;
  margin-top 7px;
  background-color: red;
}

#pythonBar {
  position: relative;
  width: 400px;
  height: 20px;
  margin-top 7px;
  background-color: red;
}

#javaBar {
  position: relative;
  width: 100px;
  height: 20px;
  margin-top 7px;
  background-color: red;
}


div[class^='bar-'] {
  position: absolute;
  background-color: blue;
  height: 10px;
  border-radius: 20px;
}

.bar-html,
.bar-python,
.bar-javascipt,
.bar-java {
  width: calc(0 - 6px);
}

.contact-me a{
  color:white;
  margin-top: 40px;
  margin-bottom: -30px;
  position: relative;
}

.contact-me a:hover {
  color:#c0c0c0;
  transform: scale(1.0);
  transition: transform .5s;
  position: inherit;
}

.contact-me {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  padding: 40px 20px 40px 20px;
}

.contact img {
    opacity: .25;
}

.comments {
    height: 80vh;
    top: 50%;
    bottom: 50%;
}

#comment-list {
  list-style-type: none;
}

.comment {
  border: thin solid black;
  display: flex;
  margin: 10px;
  padding: 10px;
  width: 600px;
}

.comment span {
  flex-grow: 1;
}

#map {
  border: thin solid black;
  height: 500px;
  width: 500px;
}

#message-box {
    height: 200px;
    width: 600px;
}

.map-div{
  display: flex;
  justify-content: space-around;
} */




/* New Styling */
/* Nav Bar */
.navbar {
    font-size:20px;
}
/* Header Styling */
.bg-dark {
    background-color: black!important;
}

.nav-link {
    color: white !important;
}

/* Footer Styling */
.footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
}

.footer a {
    text-decoration: none;
    color: black;
}




/* about page */
.about-section {
    display: flex;
    overflow: scroll;
}

.block {
    display: block;
}

.card {
    padding: 3vh;
    margin-bottom: 5vh;
    text-size-adjust: auto;
}

.card-header {
    font-size: 40px;
}

.card p {
    font-size: 20px;
}


/*  tablets and smaller */
/* bootstrap size md */
@media (max-width: 768px) {
    /* .avatar {
        margin-top: 80px;
    } */
} 

/*  desktops and smaller */
/* bootstrap size lg */
@media (max-width: 960px) {
    .avatar img{
        float: none;
        border-radius: 50%;
        margin-top: 80px;
    }

    .avatar {
        text-align: center;
    }

    .hello {
        padding-bottom: 80px;
    }
} 

/* bigger than tablets */
@media (min-width: 768px) {
.navbar-brand.abs
    {
        position: absolute;
        width: 100%;
        left: 0;
        text-align: center;
    }
}

